# swagger/v1/swagger.yaml
@@ -433,17 +433,6 @@ paths:
         '404':
           description: Review not found
   "/api/v1/contact_us":
-    get:
-      summary: Retrieves all Contacts
-      tags:
-      - ContactUs
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: Contacts retrieved
-        '401':
-          description: unauthorized
     post:
       summary: Creates a Contact Us record
       tags:
@@ -475,59 +464,12 @@ paths:
                   type: string
                 details:
                   type: string
-                comment:
-                  type: string
-                status:
-                  type: string
               required:
               - name
               - email
               - contact_number
               - subject
               - details
-  "/api/v1/contact_us/{id}":
-    parameters:
-    - name: id
-      in: path
-      description: Plan ID
-      required: true
-      schema:
-        type: string
-    put:
-      summary: Updates an Contact
-      tags:
-      - ContactUs
-      security:
-      - bearerAuth: []
-      parameters: []
-      responses:
-        '200':
-          description: Contact updated
-        '404':
-          description: Contact not found
-        '401':
-          description: unauthorized
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                email:
-                  type: string
-                  format: email
-                contact_number:
-                  type: string
-                subject:
-                  type: string
-                details:
-                  type: string
-                comment:
-                  type: string
-                status:
-                  type: string
   "/api/v1/help_centers":
     get:
       summary: Retrieves all Help Center
@@ -2349,6 +2291,76 @@ paths:
           description: review not found
         '401':
           description: unauthorized
+  "/api/v2/contact_us_manage":
+    get:
+      summary: Retrieve all ContactUs entries
+      tags:
+      - ContactUs Management
+      security:
+      - bearerAuth2: []
+      responses:
+        '200':
+          description: ContactUs list retrieved successfully
+        '401':
+          description: Unauthorized
+  "/api/v2/contact_us_manage/{id}":
+    get:
+      summary: Retrieve a specific ContactUs entry
+      tags:
+      - ContactUs Management
+      security:
+      - bearerAuth2: []
+      parameters:
+      - name: id
+        in: path
+        description: ContactUs ID
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: ContactUs entry retrieved successfully
+        '404':
+          description: ContactUs entry not found
+        '401':
+          description: Unauthorized
+    patch:
+      summary: Update a specific ContactUs entry
+      tags:
+      - ContactUs Management
+      security:
+      - bearerAuth2: []
+      parameters:
+      - name: id
+        in: path
+        description: ContactUs ID
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: ContactUs entry updated successfully
+        '404':
+          description: ContactUs entry not found
+        '401':
+          description: Unauthorized
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                contact_us:
+                  type: object
+                  properties:
+                    status:
+                      type: string
+                      example: resolved
+                    comment:
+                      type: string
+                      example: Resolved successfully
+                  required:
+                  - status
   "/api/v2/coupons":
     get:
       summary: list coupons
